Pending changes in the mainline
===============================



Version 1.1 (2015-07-03)
========================

* Support of Visual Studio 2008
* Support of FreeBSD
* Fix issue 29 (support of photometric interpretation YBR_FULL_422)


Version 1.0 (2015-02-27)
========================

* Configuration options


2015-02-25
==========

* Initial release