@@ -1,3 +1,5 @@
+#!/usr/bin/python
+
 # Orthanc - A Lightweight, RESTful DICOM Store
 # Copyright (C) 2012-2015 Sebastien Jodogne, Medical Physics
 # Department, University Hospital of Liege, Belgium
