@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Inject version information into Windows binaries
 
 
 Version 1.1 (2015-07-03)
